# pidog_rl

./: .dockerignore  .gitignore  ADDING_NECK_TAIL_SERVOS.md  CLAUDE.md  COORDINATE_SYSTEM_FIX.md  CURRICULUM_LEARNING.md  DEBUGGING_GAIT_ISSUES.md  Dockerfile  Dockerfile.nvidia  HARDWARE_SPECIFICATIONS.md  IMITATION_PRETRAINING_GUIDE.md  PPO_HYPERPARAMETERS.md  QUICKSTART.md  QUICKSTART_STANDING_FIRST.md  README.md  README_TRAINING_WORKFLOWS.md  REWARD_FUNCTION_CHANGES.md  SENSOR_INTEGRATION_GUIDE.md  SENSOR_TRAINING_README.md  SUNFOUNDER_FIX_NOTES.md  TRAINING_GUIDE.md  TWO_STAGE_TRAINING.md  VISUALIZATION_GUIDE.md  WORKFLOW.md  adjusted_walk_gait.py  benchmark_camera_impact.py  benchmark_ppo_results_cpu.json  benchmark_ppo_results_cuda.json  check_gpu.py  cleanup_docker.sh  compare_with_sunfounder.py  dc-run.sh  debug_initial_state.py  debug_sunfounder_extraction.py  docker-compose.nvidia.yml  docker-compose.yml  extract_clean_from_ros2.py  extract_sunfounder_correct_range.py  extract_sunfounder_demos.py  extract_sunfounder_demos_correct.py  (+35 more)
configs/: imitation_bc.yaml  ppo_default.yaml
datasets/: sunfounder_demos.pkl
docs/: HARDWARE_SPECIFICATIONS.md  PPO_HYPERPARAMETERS.md  REWARD_SYSTEM_ANALYSIS.md  SAC_MEMORY_GUIDE.md
model/: SERVO_SPECS.md  leg.xml  meshes.xml  pidog.xml  pidog_actuators.xml  pidog_assets.xml  pidog_sensors.xml
pidog_env/: __init__.py  feature_extractors.py  pidog_env.py
res/: meshes_template.xml
scripts/: benchmark_ppo_params.py  benchmark_sac_params.py  debug_gait_angles.py  docker_run_gui.sh  export_for_pi.py  extract_sunfounder_demos.py  quickstart.sh  test_joint_directions.py  test_setup.py  test_simple_trot.py  train_from_sunfounder.py  visualize_walk.py
tests/: calibrate_neutral.py  find_neutral_angles.py  sit.py  test_collision_detection.py  test_complete_system.py  test_new_rewards.py  test_sensors.py  test_standing.py  test_walk.py  test_walk_official.py
tools/: create_mesh_file.py  (+1 more)
(+14 files in other folders)
