[project]
name = "pidog_rl"
version = "0.1.0"
description = "Reinforcement Learning and Imitation Learning for PiDog Quadruped Robot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core simulation
    "mujoco",
    "gymnasium",

    # RL training
    "stable-baselines3",
    "tensorboard",

    # Utils
    "numpy",
    "scipy",
    "matplotlib",
    "imageio",
    "tqdm",
    "pyyaml",
]
