[project]
name = "pidog_rl"
version = "0.1.0"
description = "Neural Network Gait Learning for PiDog Quadruped Robot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Physics simulation and visualization
    "mujoco",
    "gymnasium",

    # Neural network training for gait learning
    "stable-baselines3[extra]",
    "torch",

    # Monitoring and analysis
    "tensorboard",
    "matplotlib",

    # Basic utilities
    "numpy",
]
